# asymmetric_manipulation

./: .rosinstall  CMakeLists.txt  LICENSE  README.md  package.xml
action/: CoordinationController.action  RunSimulation.action
config/: display.rviz  experiment.yaml  simulation.yaml
include/asymmetric_manipulation/: algorithm_base.hpp  ects.hpp  ext_rel_jac.hpp  rel_jac.hpp  rel_jac_abs_lim.hpp
include/coordination_algorithms/: algorithm_base.hpp  ects.hpp  experiment_base.hpp  ext_rel_jac.hpp  rel_jac.hpp  rel_jac_abs_lim.hpp
include/coordination_experiments/: coordination_controller.hpp
launch/: experiments.launch
msg/: Controllers.msg  Inputs.msg  WorkspaceLimits.msg
scripts/: run_simulations.py
src/: algorithm_base.cpp  coordination_controller.cpp  ects.cpp  ects_controller.cpp  experiment_base.cpp  ext_rel_jac.cpp  rel_jac.cpp  rel_jac_abs_lim.cpp
