<?xml version="1.0"?>
<package format="2">
  <name>coordination_algorithms_experiments</name>
  <version>1.0.0</version>
  <description>
    Implements controllers and experiments for different dual-arm coordination algorithms.
  </description>
  <author email="diogoa@kth.se">Diogo Almeida</author>
  <maintainer email="diogoa@kth.se">Diogo Almeida</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>generic_control_toolbox</depend>
</package>
