<?xml version="1.0"?>
<package format="2">
  <name>coordination_experiments</name>
  <version>1.0.0</version>
  <description>
    Implements controllers and experiments for different dual-arm coordination algorithms.
  </description>
  <author email="diogoa@kth.se">Diogo Almeida</author>
  <maintainer email="diogoa@kth.se">Diogo Almeida</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>generic_control_toolbox</depend>
  <depend>actionlib_msgs</depend>
  <depend>message_generation</depend>
  <depend>baxter_description</depend>
  <depend>robot_kinematic_simulation</depend>
  <depend>object_server</depend>
  <exec_depend>message_runtime</exec_depend>
</package>
