<?xml version="1.0"?>
<package format="2">
  <name>asymmetric_manipulation</name>
  <version>2.0.0</version>
  <description>
    Implements controllers and experiments for different dual-arm coordination algorithms,
    with an emphasis on the resolution of the coordination variables into end-effector velocities.
  </description>
  <author email="diogoa@kth.se">Diogo Almeida</author>
  <maintainer email="diogoa@kth.se">Diogo Almeida</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>generic_control_toolbox</depend>
  <depend>actionlib_msgs</depend>
  <depend>message_generation</depend>
  <depend>baxter_description</depend>
  <depend>robot_kinematic_simulation</depend>
  <depend>object_server</depend>
  <depend>rviz_visual_tools</depend>
  <exec_depend>message_runtime</exec_depend>
</package>
